# to-html

./: CHANGELOG.md  Cargo.toml  LICENSE-Apache  LICENSE-MIT  README.md  RELEASE_NOTES.md  build.rs  config.toml.sample  somefile.txt  test.html  test.txt
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
crates/ansi-to-html/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/ansi-to-html/benches/: convert.rs
crates/ansi-to-html/examples/: ansi2html.rs  htmlpipe.rs
crates/ansi-to-html/fuzz/: Cargo.toml
crates/ansi-to-html/fuzz/corpus/opt_equiv/: seed_001
crates/ansi-to-html/fuzz/fuzz_targets/: opt_equiv.rs  opt_no_opt.rs
crates/ansi-to-html/fuzz/harness/: lib.rs  tests.rs
crates/ansi-to-html/fuzz/utils/: html_interpreter.rs
crates/ansi-to-html/src/: ansi.rs  color.rs  error.rs  esc.rs  html.rs  lib.rs  test_utils.rs
crates/ansi-to-html/src/ansi/: mod.rs  parse.rs
crates/ansi-to-html/src/html/: minifier.rs  mod.rs
crates/ansi-to-html/tests/: ansi_to_html.rs  minification.rs
crates/ansi-to-html/tests/snapshots/: ansi_to_html__ariadne.snap
crates/fake-tty/: Cargo.toml  README.md
crates/fake-tty/src/: lib.rs
crates/faketty/: Cargo.toml  README.md
crates/faketty/src/: lib.rs
src/: ansi.rs  cmd.rs  color.rs  esc.rs  html.rs  lexer.rs  lib.rs  main.rs  process.rs
src/opts/: cli.rs  config.rs  mod.rs
