[package]
name = "to-html"
version = "0.1.5"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
description = "Render a terminal with ANSI colors as HTML"
categories = ["command-line-utilities"]
repository = "https://github.com/Aloso/to-html"
documentation = "https://docs.rs/to-html"
homepage = "https://github.com/Aloso/to-html"
readme = "README.md"
edition = "2021"
license = "MIT"
keywords = ["color", "cli", "terminal", "html"]
exclude = ["docs"]
resolver = "2"

[workspace]
members = ["crates/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake-tty = { path = "./crates/fake-tty", version = "0.3.1" }
ansi-to-html = { path = "./crates/ansi-to-html", version = "0.2.1" }
clap = { version = "4.1.10", features = ["derive", "wrap_help"] }
dirs-next = "2.0.0"
logos = "0.13.0"
serde = { version = "1.0.159", features = ["derive"] }
basic-toml = "0.1.2"
thiserror = "1.0.40"

[build-dependencies]
clap = { version = "4.1.10", features = ["derive"] }
clap_complete = "4.3.0"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = "thin"
strip = true
