[package]
name = "to-html"
version = "0.1.6"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
description = "Render a terminal with ANSI colors as HTML"
categories = ["command-line-utilities"]
repository = "https://github.com/Aloso/to-html"
documentation = "https://docs.rs/to-html"
homepage = "https://github.com/Aloso/to-html"
readme = "README.md"
edition = "2021"
license = "MIT"
keywords = ["color", "cli", "terminal", "html"]
exclude = ["docs"]
resolver = "2"

[workspace]
members = ["crates/*", "crates/ansi-to-html/fuzz"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake-tty = { path = "./crates/fake-tty", version = "0.3.1" }
ansi-to-html = { path = "./crates/ansi-to-html", version = "0.2.2" }
clap = { version = "4.5.48", features = ["derive", "wrap_help"] }
dirs-next = "2.0.0"
logos = "0.15.0"
serde_derive = "1.0.219"
serde = "1.0.219"
toml = "0.9.8"
thiserror = "2.0.17"
libc = "0.2"

[build-dependencies]
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.61"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = "thin"
strip = true

[profile.release-debug]
inherits = "release"
strip = false
debug = true
