[workspace]
members = ["crates/*", "crates/ansi-to-html/fuzz"]
package.edition = "2024"
package.license = "MIT OR Apache-2.0"
package.repository = "https://github.com/Aloso/to-html"
package.authors = [
  "Ludwig Stecher <ludwig.stecher@gmx.de>",
  "CosmicHorrorDev <CosmicHorrorDev@pm.me>",
]

[package]
name = "to-html"
version = "0.2.0"
description = "Render a terminal with ANSI colors as HTML"
categories = ["command-line-utilities"]
documentation = "https://docs.rs/to-html"
homepage = "https://github.com/Aloso/to-html"
readme = "README.md"
keywords = ["color", "cli", "terminal", "html"]
exclude = ["docs"]
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake-tty = { path = "./crates/fake-tty", version = "0.3.1" }
ansi-to-html = { path = "./crates/ansi-to-html", version = "0.2.2" }
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
dirs-next = "2.0.0"
logos = "0.16.1"
serde_derive = "1.0.228"
serde = "1.0.228"
toml = "1.1.2"
thiserror = "2.0.18"
libc = "0.2"

[build-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = "thin"
strip = true

[profile.release-debug]
inherits = "release"
strip = false
debug = true
