[package]
name = "ansi-to-html"
version = "0.2.2"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
description = "ANSI escape codes to HTML converter"
categories = ["command-line-interface", "encoding"]
repository = "https://github.com/Aloso/to-html"
documentation = "https://docs.rs/ansi-to-html"
homepage = "https://github.com/Aloso/to-html/tree/master/crates/ansi-to-html"
readme = "README.md"
edition = "2021"
license = "MIT"
keywords = ["color", "cli", "terminal", "html"]

[dependencies]
regex = "1.7.3"

[features]
default = []
# A now unused feature that will be removed in a future release
lazy-init = []

[dev-dependencies]
clap = { version = "4.5.27", features = ["derive"] }
divan = "0.1.16"
flate2 = "1.0.35"
insta = "1.29.0"

[[bench]]
name = "convert"
harness = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(fuzzing)"]
