[package]
name = "ansi-to-html"
version = "0.2.2"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
description = "ANSI escape codes to HTML converter"
categories = ["command-line-interface", "encoding"]
repository = "https://github.com/Aloso/to-html"
documentation = "https://docs.rs/ansi-to-html"
homepage = "https://github.com/Aloso/to-html/tree/master/crates/ansi-to-html"
readme = "README.md"
edition = "2021"
license = "MIT"
keywords = ["color", "cli", "terminal", "html"]

[dependencies]
memchr = "2.7.6"
regex = "1.11.3"

[features]
default = []
# A now unused feature that will be removed in a future release
lazy-init = []

[dev-dependencies]
clap = { version = "4.5.48", features = ["derive"] }
divan = "0.1.21"
flate2 = "1.1.5"
insta = "1.44.3"

[[bench]]
name = "convert"
harness = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(fuzzing)"]
