[package]
name = "fake-tty"
version = "0.3.0"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
description = "Run command with bash pretending to be a tty"
categories = []
repository = "https://github.com/Aloso/to-html"
documentation = "https://docs.rs/fake-tty"
homepage = "https://github.com/Aloso/to-html/tree/master/crates/fake-tty"
readme = "README.md"
edition = "2018"
keywords = ["cli", "terminal"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
