[package]
name = "fake-tty"
version = "0.3.1"
description = "Run command with bash pretending to be a tty"
categories = []
documentation = "https://docs.rs/fake-tty"
homepage = "https://github.com/Aloso/to-html/tree/main/crates/fake-tty"
readme = "README.md"
keywords = ["cli", "terminal"]
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
