[package]
name = "fake-tty"
version = "0.3.1"
description = "Run command with bash pretending to be a tty"
categories = ["command-line-interface"]
homepage = "https://github.com/Aloso/to-html/tree/main/crates/fake-tty"
readme = "README.md"
keywords = ["cli", "terminal"]
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
