[package]
name = "ansi-to-html-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.ansi-to-html]
path = ".."

[workspace]
members = ["."]

[[bin]]
name = "opt_equiv"
path = "fuzz_targets/opt_equiv.rs"
test = false
doc = false
bench = false
