[package]
name = "ansi-to-html-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
html5ever = "0.33.0"
libfuzzer-sys = "0.4"

[dependencies.ansi-to-html]
path = ".."

[dev-dependencies]
insta = "1.43.1"

[lib]
name = "html_interpreter"
path = "utils/html_interpreter.rs"

[[bin]]
name = "opt_equiv"
path = "fuzz_targets/opt_equiv.rs"
test = false
doc = false
bench = false
